update: create basic CRUD

--- a/.env.example
+++ b/.env.example
@@ -24,11 +24,11 @@ CLOUDINARY_API_SECRET=
 
 # knexjs
 DB_TYPE=pg
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASS=postgres
-DB_NAME=boilerplate
+DB_NAME=test
 
 
 # docker
